force-app/main/default/objects/Indeed_com_Job_Form__c/Indeed_com_Job_Form__c.object-meta.xml
<CustomObject>
    <label>Indeed.com JobForm</label>
    <nameField>
        <displayFormat>Form-{0}</displayFormat>
        <label>Indeed.com Job Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indeed.com JobForms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>