force-app/main/default/objects/Indeed_com_Job_Form__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <defaultValue>&apos;John&apos;</defaultValue>
    <description>This field is created as per the instruction given by tom on 1 Jan 2009</description>
    <inlineHelpText>Dear user, please enter the candidate&apos;s first name here (Ex. John)</inlineHelpText>
    <label>First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>