force-app/main/default/objects/Indeed_com_Job_Form__c/fields/Job_Satus__c.field-meta.xml
<CustomField>
    <fullName>Job_Satus__c</fullName>
    <label>Job Satus</label>
    <type>TextArea</type>
</CustomField>