force-app/main/default/objects/Indeed_com_Job_Form__c/fields/Staffing_status__c.field-meta.xml
<CustomField>
    <fullName>Staffing_status__c</fullName>
    <label>Staffing status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>